--- a/order_page/order_style.css
+++ b/order_page/order_style.css
@@ -307,6 +307,7 @@
   padding: 3.5rem 2rem;
   -webkit-box-shadow: 0px -1px 5px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0px -1px 5px 2px rgba(0, 0, 0, 0.2);
+  pointer-events: all;
 }
 
 .food-details .info {
@@ -427,9 +428,40 @@
   display: none;
 }
 
+.food-details > button {
+  position: absolute;
+  top: 2rem;
+  background-color: rgba(0, 0, 0, 0.1);
+  width: min(3.5rem, 55px);
+  height: min(3.5rem, 55px);
+  border-style: none;
+  border-radius: 8px;
+  pointer-events: all;
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 70%;
+  transition: none;
+}
+
+.food-details > button:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.food-details > button.back {
+  background-image: url(./../assets/icons/expand_left_2.png);
+  left: 2rem;
+}
+
+.food-details > button.favorite {
+  background-image: url(./../assets/icons/heart.png);
+  right: 2rem;
+}
+
 @media (min-width: 600px) {
   .food-details {
     background: transparent;
+    pointer-events: none;
     font-size: 0.7rem;
   }
 
