--- a/settings_page/settings_style.css
+++ b/settings_page/settings_style.css
@@ -97,6 +97,7 @@ select {
   height: calc(100% + 20px);
   border: solid 3px var(--gray-100);
   border-style: solid none solid solid;
+  border-radius: 5px;
 }
 
 .left-decoration::after {
@@ -230,6 +231,10 @@ hr {
     -webkit-box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.3);
   }
+
+  .address-book .address p {
+    line-height: 1.5rem;
+  }
 }
 
 .address-book h3 {
@@ -242,6 +247,7 @@ hr {
   font-size: 0.9rem;
   color: var(--gray-600);
   max-width: 80%;
+  line-height: 1.1rem;
 
   display: -webkit-box;
   -webkit-line-clamp: 3;
@@ -252,8 +258,8 @@ hr {
 .address-book .address button {
   position: absolute;
   right: 1.5rem;
-  width: clamp(30px, 3vw, 50px);
-  height: clamp(30px, 3vw, 50px);
+  width: clamp(30px, 3vw, 45px);
+  height: clamp(30px, 3vw, 45px);
   background-color: rgba(0, 0, 0, 0.12);
   border-style: none;
   border-radius: 50%;
