--- a/settings_page/settings_style.css
+++ b/settings_page/settings_style.css
@@ -44,6 +44,10 @@ h2 {
   outline: none;
 }
 
+.style1:focus {
+  border-color: var(--primary-400);
+}
+
 .style1:focus + span,
 .style1:not(:placeholder-shown) + span {
   font-size: 0.9rem;
@@ -63,11 +67,12 @@ select {
   background-color: var(--gray-100);
   color: var(--gray-700);
   border-style: none;
+  appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
   text-indent: 1px;
   text-overflow: "";
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 
   background-image: url(./../assets/icons/expand_down_2.png);
   background-repeat: no-repeat;
@@ -179,6 +184,7 @@ select {
 .account-details #country-code {
   width: 35%;
 
+  appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
   text-indent: 1px;
@@ -224,6 +230,32 @@ hr {
   border-radius: 0.5em;
   -webkit-box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.3);
+}
+
+.address-book .btn-container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  color: var(--gray-400);
+  font-size: 1.2rem;
+  margin-top: 1rem;
+}
+
+.address-book button.add {
+  background-image: url(./../assets/icons/add_2.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 70%;
+  background-color: rgba(0, 0, 0, 0.1);
+  width: 3rem;
+  height: 3rem;
+  border: none;
+  border-radius: 50%;
+  transition: none;
+}
+
+.address-book button.add:hover {
+  background-color: rgba(0, 0, 0, 0.15);
 }
 
 @media (min-width: 600px) {
