--- a/order_page/order_style.css
+++ b/order_page/order_style.css
@@ -18,6 +18,49 @@
   margin: 0.8rem;
 }
 
+/* welcome ----------------------------------- */
+.welcome {
+  font-size: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.4rem;
+  position: relative;
+  overflow-x: hidden;
+  margin-top: 1rem;
+}
+
+.welcome img {
+  width: 3.8rem;
+  height: 3.8rem;
+}
+
+.welcome h2 {
+  font-size: 1.7rem;
+  position: relative;
+  background-color: var(--bg);
+  padding: 0 1rem;
+  color: var(--primary-500);
+}
+
+.welcome h2::before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%);
+  width: 100vw;
+  height: 2px;
+  background-color: var(--primary-500);
+  z-index: -1;
+}
+
+.welcome p {
+  font-size: 1.2rem;
+  color: var(--primary-800);
+}
+/* ------------------------------------------- */
+
 /* offer ------------------------------------- */
 .offer {
   position: relative;
