--- a/global.css
+++ b/global.css
@@ -7,6 +7,7 @@
   --primary-400-40: hsla(34, 100%, 50%, 0.4);
   --primary-400-50: #ff91007c;
   --primary-500: #db7c00;
+  --primary-600: #c97200;
   --primary-800: #583500;
   --primary-900: #352000;
 
@@ -17,6 +18,7 @@
   --gray-400: #8d8d8d;
   --gray-600: #6c6c6c;
   --gray-700: #505050;
+  --gray-900: #252525;
 
   --info: #158fff;
   --bg: #f4f4f4;
@@ -84,14 +86,8 @@ main {
   }
 }
 
-button,
-input[type="submit"] {
-  cursor: pointer;
-  transition: all 0.5s;
-}
-
 .full {
-  width: 100%;
+  width: 100% !important;
 }
 
 .round {
@@ -105,6 +101,10 @@ input[type="submit"] {
     var(--primary-300) 43.89%,
     var(--primary-400) 64.72%
   );
+}
+
+button {
+  cursor: pointer;
 }
 
 button.type1,
@@ -126,6 +126,10 @@ a.type1 {
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  width: fit-content;
+  cursor: pointer;
+  transition: all 0.5s;
+  text-decoration: none;
 }
 
 button.type1:hover,
