--- a/order_page/order_style.css
+++ b/order_page/order_style.css
@@ -210,7 +210,9 @@
   transition: none;
 }
 
-.category-list button:hover {
+
+.category-list button:hover,
+.category-list button.selected {
   background-color: var(--primary-400);
   color: white;
 }
