--- a/settings_page/settings_style.css
+++ b/settings_page/settings_style.css
@@ -188,32 +188,13 @@ hr {
   align-items: center;
 }
 
-.create-address textarea {
-  height: 15em;
-  padding: 1em;
-  resize: none;
-}
-
-.create-address textarea + span {
-  top: 1.5em;
-}
-
-.create-address textarea:focus + span,
-.create-address textarea:not(:placeholder-shown) + span {
-  font-size: 0.9em !important;
-  top: -2px;
-  background-color: var(--bg);
-  padding: 0 0.5em;
-  border-radius: 2em;
-}
-
 .create-address form {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   font-size: 1rem;
 
   position: relative;
-  max-width: 1000px;
+  max-width: 900px;
   padding: 3rem 1rem;
   display: flex;
   flex-direction: column;
@@ -246,10 +227,15 @@ hr {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
+.create-address form .unsplit {
+  flex-direction: column !important;
+  gap: 2.2rem !important;
+}
+
 @media (min-width: 600px) {
   .create-address form {
-    height: 80%;
-    padding: 3rem 7rem;
+    height: 85%;
+    padding: 3rem 9rem;
     overflow-y: scroll;
     border-radius: 2rem;
     font-size: 0.8rem;
@@ -270,7 +256,7 @@ hr {
 
   .create-address .shape2 {
     position: absolute;
-    top: 100%;
+    top: 50%;
     transform: translateY(-50%) translateX(-50%);
     left: -3rem;
     width: 18rem;
@@ -285,6 +271,11 @@ hr {
 
   .create-address form h2 {
     margin-bottom: 0.8em;
+  }
+
+  .create-address form .unsplit {
+    flex-direction: row !important;
+    gap: 1rem !important;
   }
 }
 /* -------------------------------------------- */
